--- a/package.json
+++ b/package.json
@@ -3,14 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "animejs": "^3.2.1",
+    "bootstrap": "^5.2.3",
     "clsx": "^1.2.1",
+    "google-maps": "^4.3.3",
+    "helmet": "^6.0.1",
+    "mdb-react-ui-kit": "^5.1.0",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
+    "react-simply-carousel": "^8.4.1",
+    "react-svg-loader": "^3.0.3",
     "styled-components": "^5.3.6",
+    "svg": "^0.1.0",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28"
   },
@@ -37,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0"
   }
 }
